--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,28 @@
 .DS_Store
 config.py
 week10/open-ai-demo.ipynb
+week11/.ipynb_checkpoints/gpt-3-fine_tune-checkpoint.ipynb
+week11/.ipynb_checkpoints/week 11 class-checkpoint.ipynb
+week11/.ipynb_checkpoints/week 11 homework - finetune-checkpoint.ipynb
+week11/.ipynb_checkpoints/week 11 homework - finetune-redacted-checkpoint.ipynb
+week11/bills-finetune-modelname
+week10/open-ai-demo.ipynb
+week11/gpt-3-fine_tune.ipynb
+week11/love_movie_prepared (1).jsonl
+week11/tentacle/.ipynb_checkpoints/censor-tentacles-checkpoint.ipynb
+week11/tentacle/.ipynb_checkpoints/literotica-scrape-tentacle-text-checkpoint.ipynb
+week11/tentacle/censor-tentacles.ipynb
+week11/tentacle/censored-tentacles.csv
+week11/tentacle/literotica-scrape-tentacle-text.ipynb
+week11/tentacle/tentacles-stories-text-p1.csv
+week11/tentacle/tentacles-stories-text-p10.csv
+week11/tentacle/tentacles-stories-text-p11.csv
+week11/tentacle/tentacles-stories-text-p2.csv
+week11/tentacle/tentacles-stories-text-p3.csv
+week11/tentacle/tentacles-stories-text-p4.csv
+week11/tentacle/tentacles-stories-text-p5.csv
+week11/tentacle/tentacles-stories-text-p6.csv
+week11/tentacle/tentacles-stories-text-p7.csv
+week11/tentacle/tentacles-stories-text-p8.csv
+week11/tentacle/tentacles-stories-text-p9.csv
+week11/week 11 homework - finetune.ipynb
